# soem_elmo_demo

./: README.md
argv/: CMakeLists.txt  package.xml
argv_bringup/: CMakeLists.txt  package.xml
argv_bringup/config/: argv_params.yaml
argv_bringup/launch/: argv_bringup.launch
elmo_control/: CMakeLists.txt  package.xml
elmo_control/include/elmo_control/: elmo_client.h  elmo_hardware_interface.h  elmo_library.h  exceptions.h
elmo_control/launch/: elmo_control.launch
elmo_control/src/: elmo.cpp  elmo_client.cpp  elmo_hardware_interface.cpp  elmo_library.cpp
elmo_control/src/tests/: elmo_client_velocity_control.cpp  elmo_client_velocity_control_teleop.cpp  elmo_library_velocity_control.cpp  example.cpp  example_position.cpp  example_position2.cpp  menu.cpp  reset.cpp  simple_example.cpp  simple_example2.cpp  simple_example3.cpp  simple_example4.cpp  simple_test_torque.cpp  simple_test_torque2.cpp  simple_test_torque3.cpp  simple_test_vel.cpp  simple_test_vel2.cpp  simple_test_vel3.cpp  simple_test_vel4.cpp  simple_test_vel5.cpp  simple_test_vel6.cpp  slaveinfo.cpp  test_torque.cpp
ethercat_manager/: CMakeLists.txt  package.xml
ethercat_manager/include/ethercat_manager/: ethercat_manager.h
ethercat_manager/src/: ethercat_manager.cpp
ethercat_manager/src/tests/: simple_test_velocity.cpp
imu_manager/: CMakeLists.txt  package.xml
imu_manager/include/imu_manager/: imu_manager.h
imu_manager/launch/: imu_manager.launch
imu_manager/src/: imu_manager.cpp  imu_manager_node.cpp
